# personal-portfolio-website

./: .env.example  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.simplified  README.md  docker-compose.yml  fly.toml  system-prompt.md
docs/: WEB_INTERFACE_GUIDELINES_AUDIT.md
sql/: schema.sql
src/: config.rs  error.rs  main.rs
src/db/: postgres.rs
src/models/: experience.rs  message.rs  post.rs  project.rs  skill.rs
src/routes/: admin.rs  public.rs
src/services/: github.rs  mod.rs  openrouter.rs  twitter.rs
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20240315000000_initial_schema.sql
templates/: base.html
templates/admin/: dashboard.html  layout.html
templates/admin/experience/: form.html  list.html
templates/admin/messages/: list.html  view.html
templates/admin/posts/: form.html  list.html
templates/admin/projects/: form.html  list.html
templates/admin/skills/: list.html
templates/components/: footer.html  nav.html
templates/pages/: 404.html  about.html  blog.html  contact.html  home.html  post.html  project_detail.html  projects.html
