[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"
authors = ["Kadyn Pearce <kadyn@kadynpearce.dev>"]
description = "A blazing-fast developer portfolio built with Rust"

[dependencies]
# Web framework
actix-web = "4"
actix-files = "0.6"
actix-session = { version = "0.10", features = ["cookie-session"] }
actix-rt = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database (Supabase / PostgreSQL)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Templating
tera = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for GitHub API
reqwest = { version = "0.12", features = ["json"] }

# OAuth
oauth2 = "4"

# Markdown
pulldown-cmark = "0.12"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Environment
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Error handling
thiserror = "2"
anyhow = "1"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
slug = "0.1"
once_cell = "1"
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
